--- a/src/app/ALLregister/reelregister/reelregister.component.html
+++ b/src/app/ALLregister/reelregister/reelregister.component.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="col-sm-6 input-group-sm ">
                         <label>QTY</label>
-                        <input type="text" formControlName="QTY" placeholder="Enter Manufacturer Number.."
+                        <input type="text" formControlName="QTY" placeholder="Enter Quantity..."
                             class="form-control form-control-sm">
                     </div>
 
