--- a/src/app/BOM/BOM.component.html
+++ b/src/app/BOM/BOM.component.html
@@ -98,26 +98,61 @@
   </div>
   <div class="row">
     <div class="col-sm-4">
+
       <app-create [bomNames]="bomNames"></app-create>
     </div>
     <div class="col-sm-8">
-      <div class="container">
         <table id="mytable" class="table table emp-profile">
 
           <thead class="center">
             <tr>
               <th></th>
               <th>Status</th>
-              <th>Task name</th>
-              <th>BOM name </th>
-              <th>Date Added</th>
-              <th>Last Modified</th>
+              <th >Task name</th>
+              <th >BOM name </th>
+              <th >Date Added</th>
+              <th >Last Modified</th>
+              <th></th>
               <th></th>
             </tr>
           </thead>
           <tbody>
           </tbody>
         </table>
+        <div style="height: 225px !important; overflow-y: auto;">
+          <table id="mytable" class="table table emp-profile">
+  
+            <thead class="">
+            </thead>
+            
+              <tbody>
+                
+                <tr *ngFor="let taskName of taskNames" [routerLink]="['/task/', taskName.name]">
+                  <td></td>
+                  <td>
+                    <div [ngSwitch]="taskName.status">
+                      <span *ngSwitchCase="'Created'" class="badge badge-pill badge-secondary">{{taskName.status}}</span>
+                      <span *ngSwitchCase="'Checked'" class="badge badge-pill badge-primary">{{taskName.status}}</span>
+                      <span *ngSwitchDefault class="badge badge-pill badge-sucess">{{taskName.status}}</span>
+                    </div>
+                    </td>
+                  <td >{{taskName.name}}</td>
+                  <td >{{taskName.bomName}}</td>
+                  <td >{{taskName.dateAdded | date}} </td>
+                  <td >{{taskName.lastModified | date}}</td>
+                  <td ><svg (click)="deleteTask(taskName.name)" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                      viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                      stroke-linejoin="round" class="feather feather-trash-2">
+                      <polyline points="3 6 5 6 21 6"></polyline>
+                      <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                      <line x1="10" y1="11" x2="10" y2="17"></line>
+                      <line x1="14" y1="11" x2="14" y2="17"></line>
+                    </svg>
+                  </td>
+                </tr>
+              </tbody>
+          </table>
+        
       </div>
 
     </div>
