--- a/src/app/Reels/reel-card-detail/reel-card-detail.component.html
+++ b/src/app/Reels/reel-card-detail/reel-card-detail.component.html
@@ -1,79 +1,80 @@
 <div class="profile-img">
+  <div class="pb-2 mb-3 border-bottom">
+    <img src="{{ reel.photoUrl2 }}" alt="" />
+  </div>
+
+  <div class="printas">
+    <div class="pb-2 mb-3 border-bottom">
+      <div class="row">
+        <div class="col-sm-5 border-right">Reel ID:</div>
+        <div class="col-sm-7">
+          {{ reel.id }}
+        </div>
+      </div>
+    </div>
+    <div class="pb-2 mb-3 border-bottom">
+      <div class="row">
+        <div class="col-sm-5 border-right">Mnf:</div>
+        <div [routerLink]="['/members/', reel.componentasId]" class="col-sm-7">
+          <b>{{ reel.cMnf }}</b>
+        </div>
+      </div>
+    </div>
 
     <div class="pb-2 mb-3 border-bottom">
-        <img src="{{reel.photoUrl2}}" alt="" />
+      <div class="row">
+        <div class="col-sm-5 border-right sss">QTY:</div>
+        <div class="col-sm-7">
+          {{ reel.qty }}
+        </div>
+      </div>
     </div>
 
-
-
-    <div class="printas">
-        <div class="pb-2 mb-3 border-bottom">
-            <div class="row">
-                <div class="col-sm-5 border-right">
-                    Reel ID:
-                </div>
-                <div class="col-sm-7">
-                    {{reel.id}}
-                </div>
-            </div>
+    <div class="pb-2 mb-3 border-bottom">
+      <div class="row">
+        <div class="col-sm-5 border-right">Location:</div>
+        <div class="col-sm-7 qr">
+          {{ reel.location }}
+          <qrcode
+            [qrdata]="reel.location"
+            [width]="60"
+            [errorCorrectionLevel]="'M'"
+            [elementType]="'svg'"
+          >
+          </qrcode>
         </div>
-        <div class="pb-2 mb-3 border-bottom">
-            <div class="row">
-                <div class="col-sm-5 border-right">
-                    Mnf:
-                </div>
-                <div [routerLink]="['/members/', reel.componentasId]" class="col-sm-7 ">
-                    <b>{{reel.cMnf}}</b>
-                </div>
-            </div>
-        </div>
-
-        <div class="pb-2 mb-3 border-bottom">
-            <div class="row">
-                <div class="col-sm-5 border-right sss">
-                    QTY:
-                </div>
-                <div class="col-sm-7">
-                    {{reel.qty}}
-                </div>
-            </div>
-        </div>
-
-        <div class="pb-2 mb-3 border-bottom">
-            <div class="row">
-                <div class="col-sm-5 border-right">
-                    Location:
-                </div>
-                <div class="col-sm-7 qr">
-                    {{reel.location}}
-                    <qrcode [qrdata]=reel.location [width]="60" [errorCorrectionLevel]="'M'" [elementType]="'svg'">
-                    </qrcode>
-
-                </div>
-            </div>
-        </div>
-        <div class="pb-2 mb-3 border-bottom">
-            <div class="row">
-                <div class="col-sm-5 border-right">
-                    Lipdukas <br>
-                    <button class="btn btn-sm btn-outline-secondary" printSectionId="print-section" ngxPrint><i class="fa fa-print" aria-hidden="true"></i>
-                        print</button>
-                </div>
-                <div class="col-sm-7 qr">
-                    <div id="print-section">
-                        <div class="lipdukas">
-
-                            {{reel.cMnf}} <br>
-                            ID: {{reel.id}}
-                            <qrcode qrdata={{reel.id}} [width]="60" [errorCorrectionLevel]="'M'" [elementType]="'svg'">
-                            </qrcode>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="pb-2 mb-3 border-bottom">
+      <div class="row">
+        <div class="col-sm-5 border-right">
+          Lipdukas <br />
+          <button
+            class="btn btn-sm btn-outline-secondary"
+            printSectionId="print-section"
+            ngxPrint
+          >
+            <i class="fa fa-print" aria-hidden="true"></i> print
+          </button>
+        </div>
+        <div class="col-sm-7 qr">
+          <div id="print-section">
+            <div class="lipdukas">
+              {{ reel.cMnf }} <br />
+              ID: {{ reel.id }}
+              <qrcode
+                qrdata="{{ reel.id }}"
+                [width]="60"
+                [errorCorrectionLevel]="'M'"
+                [elementType]="'svg'"
+              >
+              </qrcode>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <a *ngFor="let history of history">{{history.id}} </a>
+  <a *ngFor="let history of history">{{ history.id }} </a>
 </div>
