integruotas octopartas is backendo pusės del CORS erroro

--- a/src/app/ReelLocations/put-reel/put-reel.component.html
+++ b/src/app/ReelLocations/put-reel/put-reel.component.html
@@ -27,7 +27,7 @@
         </div>
         <div class="col-sm-3">
             <div class="pt-5">
-                <button mat-button (click)="openDialog()" [disabled]="!registerForm.valid" class="btn btn-sm btn-outline-secondary btn-block"
+                <button mat-button [disabled]="!registerForm.valid" class="btn btn-sm btn-outline-secondary btn-block"
                 type="submit"><i class="fa fa-check mr-2"></i>Store</button>
             </div>
         </div>
