--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 <div class="container mt-5">
   <div style="text-align: center">
     <h1>Find your component</h1>
-    <p class="lead">All you need to do is sign up!</p>
   </div>
 </div>
 
@@ -10,26 +9,39 @@
   <div class="col-sm-4">
     <p class="lead text-center" > Ritės registracija </p>
     <div class="mx-auto" style="width: 450px;">
-      <youtube-player videoId="GYAB4Td62zI" suggestedQuality="highres" [height]="300" [width]="450" [startSeconds]="4"
-        [endSeconds]="8">
+      <youtube-player videoId="T4JoPCco2YI" suggestedQuality="highres" [height]="300" [width]="450" >
       </youtube-player>
     </div>
   </div>
   <div class="col-sm-4">
     <p class="lead text-center" > Komponento registracija </p>
     <div class="mx-auto" style="width: 450px;">
-      <youtube-player videoId="GYAB4Td62zI" suggestedQuality="highres" [height]="300" [width]="450" [startSeconds]="4"
-        [endSeconds]="8">
+      <youtube-player videoId="VmEipT1lz0E" suggestedQuality="highres" [height]="300" [width]="450" [startSeconds]="0"
+        [endSeconds]="64">
       </youtube-player>
     </div>
   </div>
   <div class="col-sm-4">
     <p class="lead text-center" > Paieškos sistema </p>
     <div class="mx-auto" style="width: 450px;">
-      <youtube-player videoId="GYAB4Td62zI" suggestedQuality="highres" [height]="300" [width]="450" [startSeconds]="4"
-        [endSeconds]="8">
+      <youtube-player videoId="MHXPp-SEUeI" suggestedQuality="highres" [height]="300" [width]="450">
       </youtube-player>
     </div>
+
+  </div>
+</div>
+<div class="row mt-5">
+  <div class="col-sm-4">
+    <p class="lead text-center" > Ritės padėjimas į lentyną </p>
+    <div class="mx-auto" style="width: 450px;">
+      <youtube-player videoId="rH36GyhZYk8" suggestedQuality="highres" [height]="300" [width]="450" >
+      </youtube-player>
+    </div>
+  </div>
+  <div class="col-sm-4">
+
+  </div>
+  <div class="col-sm-4">
 
   </div>
 </div>
