--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -1,6 +1,6 @@
 <main role="main" class="">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Dashboard</h1>
+    <h1 class="h2">Komponentai</h1>
 
     <div class="row align-items-left">
       <label class=" mt-2 px-2" for="Size">Sort by: </label>
