--- a/src/app/admin/admin-list/admin-list.component.html
+++ b/src/app/admin/admin-list/admin-list.component.html
@@ -1,11 +1,6 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
 
-	<button class="btn btn-secondary" (click)="turnOnAll()" >Turn on All</button>
-	<button class="btn btn-secondary" (click)="turnOffAll()" >Turn off All</button>
-
-
-
 	<div class="row">
 	<div class="col-lg-12">
 		<div class="main-box clearfix">
@@ -28,14 +23,14 @@
 								<span class="user-subhead">{{User.roles}}</span>
 							</td>
 							<td>
-								{{User.created | date}} 
+								{{User.created | date}}
 							</td>
 							<td class="text-center ">
                                 <span class="badge badge-success">Active</span>
 							</td>
 							<td class="in" >
 
-                            
+
 
 							</td>
 							<td style="width: 20%;">
@@ -66,16 +61,22 @@
 							</td>
 						</tr>
                     </tbody>
-                    
+
                 </table>
-                
+
             </div>
-            
-			
+
+
         </div>
-        
+
     </div>
-    
+    <button class="btn btn-secondary" (click)="turnOnAll()" >Turn on All</button>
+	<button class="btn btn-secondary" (click)="turnOffAll()" >Turn off All</button>
+
+    <ngx-colors ngx-colors-trigger [(ngModel)]="color" ></ngx-colors>
+
+
+
 </div>
 </div>
 <app-admin-card></app-admin-card>
