--- a/src/app/members/component-detail/info-octopart/info-octopart.component.html
+++ b/src/app/members/component-detail/info-octopart/info-octopart.component.html
@@ -40,6 +40,14 @@
       >
         <i class="fas fa-cog"></i> Octopart</a
       >
+      <a
+        *ngIf="this.info != null"
+        class="btn btn-sm btn-outline-secondary ml-1"
+        [href]="sanitize('dynamicsnav://lava:7046/LightConversion2018/Light%20Conversion%2C%20UAB/runpage?page=30&personalization=30&$filter=Item.%27No.%27%20IS%20%27%40%2A' + components.buhNr + '%2A%27&mode=Edit')"
+        target="_blank"
+      >
+      <i class="fa fa-globe"></i>NAV kortelė</a
+      >
     </div>
   </div>
 </div>
