--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,6 +68,12 @@
                                 Greita ritės registracija
                             </a>
                         </li>
+                        <li class="nav-item">
+                          <a class="nav-link" [routerLink]="['/fast/2']">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line></svg>
+                              Greita ritės registracija be lentynos
+                          </a>
+                      </li>
                             <li class="nav-item">
                                 <a class="nav-link" [routerLink]="['/register/component']">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line></svg>
