--- a/src/app/members/component-card/component-card.component.html
+++ b/src/app/members/component-card/component-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-2" style="width: 8rem;">
   <div class="card-img-wrapper">
-    <img class="card-img-top" class="img-thumbnail" src="{{components?.photoUrl}}" alt="{{components.mnf}}">
+    <img [routerLink]="['/members/', components.id]" class="card-img-top" class="img-thumbnail" src="{{components?.photoUrl}}" alt="{{components.mnf}}">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-dark btn-sm" [routerLink]="['/members/', components.id]"><i
             class="fa fa-info" aria-hidden="true"></i></button></li>
