--- a/src/app/members/usedreel-list/usedreel-list.component.html
+++ b/src/app/members/usedreel-list/usedreel-list.component.html
@@ -1,24 +1,9 @@
 
 
 
-<button class="btn btn-sm btn-outline-secondary btn-block"  (click)="loadComparedReels()">
-SEARCH REELS
-</button>
+<h3 class="text-center" >Ritės</h3>
 
 
-
-<div class="mt-3" *ngIf="kint >= 1">
-  <div *ngIf="loading else loaded">
-    <div class="row">
-      <div class="col-sm-4"></div>
-      <div class="col-sm-4"><mat-spinner class="center"></mat-spinner></div>
-      <div class="col-sm-4"></div>
-    </div>
-
-</div>
-
-
-<ng-template #loaded>
   <div>
     <table class="table mt-2">
       <thead>
@@ -29,15 +14,15 @@ SEARCH REELS
           <th scope="col">Rites vieta</th>
         </tr>
       </thead>
-      <div *ngIf="ngOnInit()" class="spinner-border text-primary"></div>
       <tbody>
         <tr *ngFor="let reels of reels">
           <td>{{reels.id}}</td>
           <td>{{reels.qty}}</td>
           <td>{{reels.cMnf}}</td>
-          <td>
-           <button *ngIf="reels.location !== '0' && reels.location > 0" class="myButton" (click)="TakeOut(reels.id)"><i class="fas fa-lightbulb" aria-hidden="true"></i> Turn on LED and take reel {{reels.location}}</button>
+          <td  *ngIf="reels.location !== '0' && reels.location > 0">
+           <button class="myButton" (click)="Checking(reels.id)"><i class="fas fa-lightbulb" aria-hidden="true"></i> Turn on LED and take reel {{reels.location}}</button>
           </td>
+          <td *ngIf="reels.location !== '0'">{{reels.location}}</td>
         </tr>
 
       </tbody>
@@ -58,5 +43,4 @@ SEARCH REELS
       </tbody>
     </table>
   </div>
-</ng-template>
-</div>
+
