--- a/src/app/ReelLocations/put-reel/put-reel.component.html
+++ b/src/app/ReelLocations/put-reel/put-reel.component.html
@@ -1,35 +1,11 @@
 <form #registerForm="ngForm" (ngSubmit)="SetLocation()">
 
-    <div class="row">
-        <div class="col-sm-3">
-            <div class="pt-3 pb-3 mb-4 border-right text-center">
-                <div class="pt-2 mb-1 text-center">
-                    <label>ID</label>
-                </div>
-                <div class="pt-3 pb-2 mb-3 text-center">
-                    <label>Sunaudotų komponentų kiekis</label>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="pt-1 pb-2 mb-3">
-                <div class="pt-2 mb-1">
-                    <input type="text" required name="Id" placeholder="Enter ID Here.." class="form-control" required
-                        [(ngModel)]="model.Id">
-                </div>
-                <div class="pt-3 pb-2 mb-3 text-center">
-                    <input type="number" required name="Qty" placeholder="Įveskite sunaudotų komponentų skaičių"
-                        class="form-control" required [(ngModel)]="model.QTY">
-                </div>
-
-            </div>
-
-        </div>
-        <div class="col-sm-3">
-            <div class="pt-5">
-                <button mat-button [disabled]="!registerForm.valid" class="btn btn-sm btn-outline-secondary btn-block"
-                type="submit"><i class="fa fa-check mr-2"></i>Store</button>
-            </div>
-        </div>
+    <div class="pt-2 mb-1">
+        <input type="text" required name="Id" placeholder="Įveskite ritės/pakuotės ID" class="form-control" required [(ngModel)]="model.Id">
     </div>
+    <div class="pt-3 pb-2 mb-3 text-center">
+        <input type="number" required name="Qty" placeholder="Įveskite sunaudotų komponentų skaičių" class="form-control" required [(ngModel)]="model.QTY">
+    </div>
+    <button mat-button [disabled]="!registerForm.valid" class="btn btn-lg btn-block btn-outline-secondary" type="submit"><i class="fa fa-check mr-2"></i>Store</button>
+
 </form>
