--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -1,97 +1,95 @@
 <main role="main" class="">
-  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Komponentai</h1>
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <div class="row">
+            <div class="col-sm-2">
+                <h1>Komponentai</h1>
+            </div>
+            <div class="col-sm-2">
+                <div class="row align-items-left">
+                    <label class=" mt-2 px-2" for="Size">Sort by: </label>
+                    <div class="btn-group btn-group-sm float-left">
+                        <button type="button" name="orderBy" class="btn btn-sm btn-outline-secondary" [(ngModel)]="componentParams.OrderBy" (click)="loadComponents()" btnRadio="id">ID</button>
+                        <button type="button" name="orderBy" class="btn btn-sm btn-outline-secondary" [(ngModel)]="componentParams.OrderBy" (click)="loadComponents()" btnRadio="created">Date</button>
+                        <button type="button" name="orderBy" class="btn btn-sm btn-outline-secondary" [(ngModel)]="componentParams.OrderBy" (click)="loadComponents()" btnRadio="mnf">Mnf</button>
+                        <button type="button" name="orderBy" class="btn btn-sm btn-outline-secondary" [(ngModel)]="componentParams.OrderBy" (click)="loadComponents()" btnRadio="nominal">Nominal</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="btn-toolbar mb-2 mb-md-0">
+                    <form class="form-inline d-flex justify-content-center  " #form="ngForm" (ngSubmit)="loadComponents()" novalidate>
 
-    <div class="row align-items-left">
-      <label class=" mt-2 px-2" for="Size">Sort by: </label>
-      <div class="btn-group btn-group-sm float-left">
-        <button type="button" name="orderBy" class="btn btn-sm btn-outline-secondary"
-          [(ngModel)]="componentParams.OrderBy" (click)="loadComponents()" btnRadio="id">ID</button>
-        <button type="button" name="orderBy" class="btn btn-sm btn-outline-secondary"
-          [(ngModel)]="componentParams.OrderBy" (click)="loadComponents()" btnRadio="created">Newest component</button>
-      </div>
+                        <div class="input-group input-group-sm px-1">
+                            <div class="input-group-prepend">
+                                <label class="input-group-text" for="Type">Type</label>
+                            </div>
+                            <select class="custom-select" id="Type" [(ngModel)]="componentParams.Type" name="Type">
+                <option *ngFor="let Type of TypeList" [value]="Type" (click)="loadComponents()">
+                  {{Type}}
+                </option>
+              </select>
+                        </div>
+
+                        <div class="input-group input-group-sm px-1">
+                            <div class="input-group-prepend">
+                                <label class="input-group-text" for="Size">Size</label>
+                            </div>
+                            <select class="custom-select" id="Size" [(ngModel)]="componentParams.Size" name="Size">
+                <option *ngFor="let Size of SizeList" [value]="Size" (click)="loadComponents()">
+                  {{Size}}
+                </option>
+              </select>
+                        </div>
+
+                        <div class="px-1">
+                            <input type="text" required name="BuhNr" placeholder="Enter Buh. Nr.." class="form-control form-control-sm" required [(ngModel)]="componentParams.BuhNr">
+                        </div>
+                        <div class="px-1 mt-1">
+                            <input type="text" required name="Nominal" placeholder="Enter Nominal.. e.g. 2.2 kΩ " class="form-control form-control-sm" required [(ngModel)]="componentParams.Nominal">
+                        </div>
+                        <div class="px-1 mt-1">
+                            <input type="text" required name="mnf" placeholder="Enter Manufacturer Nr.." class="form-control form-control-sm" required [(ngModel)]="componentParams.Mnf" (ngModelChange)="componentParams.Mnf = $event.toUpperCase()">
+                        </div>
+
+                        <div class="btn-group mr-2 mt-1">
+                            <button type="button" class="btn btn-sm btn-outline-secondary" (click)="resetFilter()">Clear Filters</button>
+                            <button type="submit" class="btn btn-sm btn-secondary">Apply filters</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
-
-    <div class="btn-toolbar mb-2 mb-md-0">
-      <form class="form-inline d-flex justify-content-center  " #form="ngForm" (ngSubmit)="loadComponents()" novalidate>
-
-        <div class="input-group input-group-sm px-1">
-          <div class="input-group-prepend">
-            <label class="input-group-text" for="Type">Type</label>
-          </div>
-          <select class="custom-select" id="Type" [(ngModel)]="componentParams.Type" name="Type">
-            <option *ngFor="let Type of TypeList" [value]="Type.value" (click)="loadComponents()">
-              {{Type.display}}
-            </option>
-          </select>
-        </div>
-
-        <div class="input-group input-group-sm px-1">
-          <div class="input-group-prepend">
-            <label class="input-group-text" for="Size">Size</label>
-          </div>
-          <select class="custom-select" id="Size" [(ngModel)]="componentParams.Size" name="Size">
-            <option *ngFor="let Size of SizeList" [value]="Size.value" (click)="loadComponents()">
-              {{Size.display}}
-            </option>
-          </select>
-        </div>
-
-        <div class="px-1">
-          <input type="text" required name="BuhNr" placeholder="Enter Buh. Nr.." class="form-control form-control-sm"
-            required [(ngModel)]="componentParams.BuhNr">
-        </div>
-        <div class="px-1">
-          <input type="text" required name="Nominal" placeholder="Enter Nominal.." class="form-control form-control-sm"
-            required [(ngModel)]="componentParams.Nominal">
-        </div>
-        <div class="px-1">
-          <input type="text" required name="mnf" placeholder="Enter Manufacturer Nr.."
-            class="form-control form-control-sm" required [(ngModel)]="componentParams.Mnf">
-        </div>
-
-        <div class="btn-group mr-2">
-          <button type="button" class="btn btn-sm btn-outline-secondary" (click)="resetFilter()">Clear Filters</button>
-          <button type="submit" class="btn btn-sm btn-secondary">Apply filters</button>
-
-        </div>
-      </form>
-    </div>
-  </div>
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </main>
 
 
-
-
-
-
 <div class="card-deck">
-  <div *ngFor="let components of components">
-    <app-component-card [components]="components"></app-component-card>
-  </div>
-
+    <div *ngFor="let components of components">
+        <app-component-card [components]="components"></app-component-card>
+    </div>
 </div>
 
 
 <div class="row">
-  <div class="col-4">
+    <div class="col-4">
 
-  </div>
-  <div class="col-4">
-    <div class="d-flex justify-content-center mt-2 " *ngIf="pagination.totalItems > 25">
-      <div class="px-1">
-        <pagination class="pagination " *ngIf="pagination" [boundaryLinks]="true" [totalItems]="pagination.totalItems"
-          [itemsPerPage]="pagination.itempsPerPage" [(ngModel)]="pagination.currentPage"
-          (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;"
-          lastText="&raquo;">
-        </pagination>
-      </div>
     </div>
-  </div>
-  <div class="col-4">
-    <div class="float-right mt-3">
-      <h3>Matches - <strong>{{pagination.totalItems}}</strong> found</h3>
+    <div class="col-4">
+        <div class="d-flex justify-content-center mt-2 " *ngIf="pagination.totalItems > 25">
+            <div class="px-1">
+                <pagination class="pagination " *ngIf="pagination" [maxSize]="8" [rotate]="true" [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itempsPerPage" [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)"
+                    previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+                </pagination>
+            </div>
+        </div>
     </div>
-  </div>
+    <div class="col-4">
+        <div class="float-right mt-3">
+            <h3>Matches - <strong>{{pagination.totalItems}}</strong> found</h3>
+        </div>
+    </div>
 </div>
